# index-tts2-api

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README_API_SERVER.md  api_server_v2.py  docker-compose.yaml  entrypoint.sh  install_api_server.py  main.py  pyproject.toml  requirements.txt  start_api_server.sh  test_concurrent.py  test_fp16_api.py  test_fp16_modules.py  test_simple_vllm.py  webui_v2.py
.github/workflows/: cleanup_and_build.yml  docker-ghcr.yml
indextts/: infer_vllm_v2.py
indextts/s2mel/modules/: diffusion_transformer.py  flow_matching.py
indextts/utils/: front.py
