[project]
name = "index-tts-vllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "descript-audiotools==0.7.2",
    "gradio>=5.49.1",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "matplotlib==3.8.2",
    "modelscope>=1.31.0",
    "munch==4.0.0",
    "ninja>=1.13.0",
    "omegaconf>=2.3.0",
    "protobuf>=3.19.0,<3.20.0",
    "sentencepiece>=0.2.1",
    "vllm==0.10.2",
]
